--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -1,6 +1,6 @@
 <mat-card id="patient_card">
 	<ng-content select="[header]"></ng-content>
-	<div id="layout_header" fxLayout="row" fxLayoutAlign="space-between">
+	<div id="layout_header" fxLayout="row" fxLayoutAlign="space-between" fxLayout.lt-sm="column">
 		<mat-card-header>
 			<div id="avatar" mat-card-avatar class="header-image"></div>
 			<mat-card-title>
