tg-1986 fix responsive de procedimientos en historico de evoluciones

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -142,7 +142,7 @@
 
 							<div fxLayout="column" fxLayoutGap="15px" fxFlex="100%">
 								<div fxLayout="row" fxLayoutGap="15px" fxLayout.xs="column">								
-									<div fxLayout="column wrap" fxFlex="70%">
+									<div fxLayout="column" fxFlex="70%">
 										<h2 class="mat-h2 page-title primary capitalize-first-letter">{{historicalProblem.problemPt}}</h2>
 
 										<div *ngIf="historicalProblem.consultationReasons.length">
