--- a/front-end/webapp/src/styles.scss
+++ b/front-end/webapp/src/styles.scss
@@ -39,6 +39,6 @@ section {
 
 @media (max-width: $mobile-popups) {
 	div.cdk-global-overlay-wrapper div.cdk-overlay-pane {
-		width: 100%;
+		width: 100% !important;
 	}
 }
