--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
@@ -26,7 +26,7 @@
 
 			<ng-template #vacunasForm>
 				<div>
-					<div fxLayout="row" fxLayoutGap="2%">
+					<div fxLayout="row" fxLayout.lt-lg="column" fxLayoutGap="2%">
 						<mat-form-field appearance="outline">
 							<mat-label [translate]="'ambulatoria.paciente.vacunas.aplicar.INMUNIZATION'">
 							</mat-label>
