--- a/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.scss
@@ -1,5 +1,4 @@
 @import "../../../../../assets/styles/variables";
-@import "../../../../../assets/styles/mixins.scss";
 
 .bold{
 	font-weight: bold;
@@ -11,21 +10,12 @@ mat-icon {
 
 span {
 	float: left;
-	clear: left
+	clear: left;
 }
 
-.form-row{
-	@include form-row;
+.form-row {
 	margin-top: 15px;
 	margin-bottom: 15px;
-
-
-	div{
-		height: 50%;
-		width: 50%;
-		flex-grow: 1;
-	}
-
 }
 
 .noInformation{
