--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
@@ -21,7 +21,7 @@
 					fxFlex.gt-xs="60"
 					[options]="profesionalesTypeahead" [placeholder]="'turnos.home.PROFESSIONAL_SEARCH'"
 					[initValue]="profesionalInitValue"
-					(onSelectionChange)="goToSelectAgenda($event)"
+					(onSelectionChange)="navigate($event)"
 				>
 				</app-typeahead>
 
