--- a/front-end/webapp/src/app/modules/core/components/typeahead/typeahead.component.html
+++ b/front-end/webapp/src/app/modules/core/components/typeahead/typeahead.component.html
@@ -3,6 +3,7 @@
 		<input type="text"
 			   placeholder="{{ placeholder | translate }}"
 			   formControlName="searchValue"
+			   #trigger="matAutocompleteTrigger"
 			   matInput
 			   [matAutocomplete]="auto">
 		<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
@@ -14,7 +15,7 @@
 			</mat-option>
 		</mat-autocomplete>
 
-		<button *ngIf="form.value?.searchValue?.length" id="clear" type="button" mat-icon-button matSuffix (click)="clear()">
+		<button *ngIf="form.value?.searchValue?.length" id="clear" type="button" mat-icon-button matSuffix (click)="clear($event, trigger)">
 			<mat-icon>close</mat-icon>
 		</button>
 
