--- a/front-end/webapp/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -235,32 +235,11 @@
 						[translate]="'pacientes.form.INVALID'"></mat-error>
 				</mat-form-field>
 
-				<div class="form-row">
-					<div>
-						<div>
-							<span [translate]="'pacientes.form.MEDICAL_COVERAGE_NAME'"></span>
-						</div>
-						<mat-form-field appearance="outline">
-							<input id="medicalCoverageName" name="medicalCoverageName" formControlName="medicalCoverageName"
-								placeholder="{{'pacientes.form.MEDICAL_COVERAGE_NAME' | translate}}" matInput>
-							<mat-error *ngIf="formSubmitted && hasError(form, 'maxlength', 'medicalCoverageName')"
-								[translate]="'pacientes.form.INVALID'"></mat-error>
-						</mat-form-field>
-					</div>
-
-					<div>
-						<div>
-							<span [translate]="'pacientes.form.MEDICAL_COVERAGE_AFFILIATE_NUMBER'"></span>
-						</div>
-						<mat-form-field appearance="outline">
-							<input id="medicalCoverageAffiliateNumber" name="medicalCoverageAffiliateNumber"
-								formControlName="medicalCoverageAffiliateNumber"
-								placeholder="{{'pacientes.form.MEDICAL_COVERAGE_AFFILIATE_NUMBER' | translate}}" matInput>
-							<mat-error
-								*ngIf="formSubmitted && hasError(form, 'maxlength', 'medicalCoverageAffiliateNumber')"
-								[translate]="'pacientes.form.INVALID'"></mat-error>
-						</mat-form-field>
-					</div>
+				<div fxLayout="column">
+					<span [translate]="'Cobertura Medica'"></span>
+					<button mat-stroked-button color="primary" type="button" (click)="openMedicalCoverageDialog()" class="medical-coverage">
+						<span [translate]="'Actualizar cobertura'"></span>
+					</button>
 				</div>
 
 				<ng-container *featureFlag="'agregarMedicosAdicionales'">
